[package]
name = "articleman"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart"] }
diesel = { version = "2.1.0", features = ["postgres"] }
clap = { version = "4.5.4", features = ["derive", "color", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
mdbook = "0.4.37"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
axum-extra = { version = "0.9.3", features = [
	"async-read-body",
	"cookie",
	"cookie-private",
	"cookie-signed",
	"form",
	"json-deserializer",
	"json-lines",
	"multipart",
	"query",
	"typed-routing",
	"typed-header",
] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
kanidm_client = "1.2.2"
toml = "0.8.14"
anyhow = "1.0.86"
merge = "0.1.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres", "tokio"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
